--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -18,187 +18,44 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-    html, body {
-      display: grid;
-      height: 100%;
-      width: 100%;
-      place-items: center;
-      background-color: #fff;
-    }
-    ::selection {
-      background: #1a75ff;
-      color: #fff;
-    }
-    .wrapper {
-      overflow: hidden;
-      max-width: 390px;
-      background: #1F4590;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    }
-    .wrapper .title-text {
-      display: flex;
-      width: 200%;
-      color: #FFA451;
-    }
-    .wrapper .title {
-      width: 50%;
-      font-size: 35px;
-      font-weight: 600;
-      text-align: center;
-      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    .wrapper .slide-controls {
-      position: relative;
-      display: flex;
-      height: 50px;
-      width: 100%;
-      overflow: hidden;
-      margin: 30px 0 10px 0;
-      justify-content: space-between;
-      border: 1px solid lightgrey;
-      border-radius: 15px;
-    }
-    .slide-controls .slide {
-      height: 100%;
-      width: 100%;
-      color: #fff;
-      font-size: 18px;
-      font-weight: 500;
-      text-align: center;
-      line-height: 48px;
-      cursor: pointer;
-      z-index: 1;
-      transition: all 0.6s ease;
-    }
-    .slide-controls label.signup {
-      color: #1F4590;
-    }
-    .slide-controls .slider-tab {
-      position: absolute;
-      height: 100%;
-      width: 50%;
-      left: 0;
-      z-index: 0;
-      border-radius: 15px;
-      background: #FFA451;
-      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    input[type="radio"] {
-      display: none;
-    }
-    #signup:checked ~ .slider-tab {
-      left: 50%;
-    }
-    #signup:checked ~ label.signup {
-      color: #fff;
-      cursor: default;
-      user-select: none;
-    }
-    #signup:checked ~ label.login {
-      color: #000;
-    }
-    #login:checked ~ label.signup {
-      color: #000;
-    }
-    #login:checked ~ label.login {
-      cursor: default;
-      user-select: none;
-    }
-    .wrapper .form-container {
-      width: 100%;
-      overflow: hidden;
-    }
-    .form-container .form-inner {
-      display: flex;
-      width: 200%;
-    }
-    .form-container .form-inner form {
-      width: 50%;
-      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    .form-inner form .field {
-      height: 50px;
-      width: 100%;
-      margin-top: 20px;
-    }
-    .form-inner form .field input {
-      height: 100%;
-      width: 100%;
-      outline: none;
-      padding-left: 15px;
-      border-radius: 15px;
-      border: 1px solid lightgrey;
-      border-bottom-width: 2px;
-      font-size: 17px;
-      transition: all 0.3s ease;
-    }
-    .form-inner form .field input:focus {
-      border-color: #1a75ff;
-    }
-    .form-inner form .field input::placeholder {
-      color: #999;
-      transition: all 0.3s ease;
-    }
-    form .field input:focus::placeholder {
-      color: #1a75ff;
-    }
-    .form-inner form .pass-link {
-      margin-top: 5px;
-    }
-    .form-inner form .signup-link {
-      text-align: center;
-      margin-top: 30px;
-    }
-    .form-inner form .pass-link a,
-    .form-inner form .signup-link a {
-      color: #fff;
-      text-decoration: none;
-    }
-    .form-inner form .pass-link a:hover,
-    .form-inner form .signup-link a:hover {
-      text-decoration: underline;
-    }
-    .btn-custom {
-      border-radius: 60px;
-    }
-    .custom-bg-info {
-      background-color: #1F4590;
-    }
-    .custom-text-info {
-      color: #1F4590;
-    }
-    .custom-bg-warning {
-      background-color: #FFA451;
-    }
-    .custom-text-warning {
-      color: #FFA451;
-    }
-    .font-bold {
-      font-weight: 700;
-    }
-    .font-semibold {
-      font-weight: 600;
-    }
-    .font-regular {
-      font-weight: 400;
-    }
-    .navbar-brand {
-      align-items: baseline;
-      position: absolute;
-      top: 20px;
-      left: 20px;
-    }
-    .border-medium {
-      border-radius: 10px;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+    html, body { display: grid; height: 100%; width: 100%; place-items: center; background-color: #fff; }
+    ::selection { background: #1a75ff; color: #fff; }
+    .wrapper { overflow: hidden; max-width: 390px; background: #1F4590; padding: 30px; border-radius: 15px; box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; }
+    .wrapper .title-text { display: flex; width: 200%; color: #FFA451; }
+    .wrapper .title { width: 50%; font-size: 35px; font-weight: 600; text-align: center; transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+    .wrapper .slide-controls { position: relative; display: flex; height: 50px; width: 100%; overflow: hidden; margin: 30px 0 10px 0; justify-content: space-between; border: 1px solid lightgrey; border-radius: 15px; }
+    .slide-controls .slide { height: 100%; width: 100%; color: #fff; font-size: 18px; font-weight: 500; text-align: center; line-height: 48px; cursor: pointer; z-index: 1; transition: all 0.6s ease; }
+    .slide-controls label.signup { color: #1F4590; }
+    .slide-controls .slider-tab { position: absolute; height: 100%; width: 50%; left: 0; z-index: 0; border-radius: 15px; background: #FFA451; transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+    input[type="radio"] { display: none; }
+    #signup:checked ~ .slider-tab { left: 50%; }
+    #signup:checked ~ label.signup { color: #fff; cursor: default; user-select: none; }
+    #signup:checked ~ label.login { color: #000; }
+    #login:checked ~ label.signup { color: #000; }
+    #login:checked ~ label.login { cursor: default; user-select: none; }
+    .wrapper .form-container { width: 100%; overflow: hidden; }
+    .form-container .form-inner { display: flex; width: 200%; }
+    .form-container .form-inner form { width: 50%; transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+    .form-inner form .field { height: 50px; width: 100%; margin-top: 20px; }
+    .form-inner form .field input { height: 100%; width: 100%; outline: none; padding-left: 15px; border-radius: 15px; border: 1px solid lightgrey; border-bottom-width: 2px; font-size: 17px; transition: all 0.3s ease; }
+    .form-inner form .field input:focus { border-color: #1a75ff; }
+    .form-inner form .field input::placeholder { color: #999; transition: all 0.3s ease; }
+    form .field input:focus::placeholder { color: #1a75ff; }
+    .form-inner form .pass-link { margin-top: 5px; }
+    .form-inner form .signup-link { text-align: center; margin-top: 30px; }
+    .form-inner form .pass-link a, .form-inner form .signup-link a { color: #fff; text-decoration: none; }
+    .form-inner form .pass-link a:hover, .form-inner form .signup-link a:hover { text-decoration: underline; }
+    .btn-custom { border-radius: 60px; }
+    .custom-bg-info { background-color: #1F4590; }
+    .custom-text-info { color: #1F4590; }
+    .custom-bg-warning { background-color: #FFA451; }
+    .custom-text-warning { color: #FFA451; }
+    .font-bold { font-weight: 700; }
+    .font-semibold { font-weight: 600; }
+    .font-regular { font-weight: 400; }
+    .navbar-brand { align-items: baseline; position: absolute; top: 20px; left: 20px; }
+    .border-medium { border-radius: 10px; }
   </style>
 </head>
 <body>
@@ -358,7 +215,7 @@
               // Proses respons dari server
               console.log(response);
               alert("login berhasil");
-              window.location.href = response.redirected_url;
+              window.location.href = response.redirect_url;
           },
           error: function(xhr) {
             // Tangani dan tampilkan pesan error dari server
