--- a/app/templates/user/layout_user.html
+++ b/app/templates/user/layout_user.html
@@ -68,6 +68,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/user/profile"><img src="../static/icon/icon_profile.svg" height="25" width="25" alt="icon_username">  Profile</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="/user/history_konsultasi"><img src="../static/icon/history_user.svg" height="25" width="25" alt="icon_username">  History</a>
       </li>
     </ul>
     <div>
